--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://pattersonselectric.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^2.0.6"
   }
 }
