--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "mdb-react-ui-kit": "^8.0.0",
+    "mdb-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
