--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tinymce/tinymce-react": "^5.0.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-switch-button-react": "^1.2.0",
     "dotenv": "^16.4.5",
     "mdb-react-ui-kit": "^8.0.0",
     "mdb-ui-kit": "^7.2.0",
