--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toggle": "^4.1.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
