--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-switch-button-react": "^1.2.0",
     "dotenv": "^16.4.5",
+    "emoji-picker-react": "^4.11.1",
     "mdb-react-ui-kit": "^8.0.0",
     "mdb-ui-kit": "^7.2.0",
     "react": "^18.2.0",
