--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-sliding-pane": "^7.3.0",
     "react-toggle": "^4.1.3",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "react-slide-out": "^0.1.4"
   }
 }
